# TriDiag-Solver

./: CMakeLists.txt  Main.cpp  TriDiagSolver.cl  TriDiagSolver.hpp  TriDiagSolverOps.cl
CUDA/: CMakeLists.txt  cusparse_ops.hxx  main.cu  spike_host.cu  spike_kernel.hxx
HIP/: CMakeLists.txt  cusparse_ops.hpp  hip_definitions.hpp  main.cpp  spike_host.hip.cpp  spike_kernel.hpp  tridiag_benchmark_hip.cpp  tridiag_benchmark_hip.hpp  tridiag_solver.hpp  tridiag_test_hip.cpp  tridiag_test_hip.hpp
OpenCL/: CMakeLists.txt  Main.cpp  Options.cpp  Options.hpp  TriDiagSolver.cl  TriDiagSolver.hpp
validate/: CMakeLists.txt  Main.cu  Validate.hpp
